added materialize, worked on navbar

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,7 +1,13 @@
-.navbar {
+nav {
     background-color: #00cccc;
 }
 
 #enter {
     background-color: #FF5E00;
+}
+
+.btn {
+    margin-top: 12px;
+    background-color: #FF5E00;
+    border-radius: 12px
 }
