added card, fixed some css

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -1,9 +1,9 @@
 nav {
-    background-color: #00cccc;
+    background-color: #FF5E00;
 }
 
 #enter {
-    background-color: #FF5E00;
+    background-color: #00cccc
 }
 
 .btn {
