--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -1,6 +1,7 @@
-.card-panel {
-    margin-top: 6%;
-    border-radius: 5px
+.card {
+    margin-top: 15%;
+    border-radius: 5px;
+    
 }
 
 label {
@@ -12,7 +13,15 @@ body {
 
 }
 
-#cardTitle {
+.card-title {
     text-align: center;
-    color: #00cccc
+    color: teal;
+}
+
+.card .card-title {
+    font-size: 40px;
+}
+
+.card .card-content .card-title {
+    margin-bottom: 30px;
 }
